// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemsNumber should render table with total number of items + customized title 1`] = `
<div
  className="tc-items-number"
  id="list-items-number"
>
  42 bananas
</div>
`;

exports[`ItemsNumber should render table with total number of items + number of selected items 1`] = `
<div
  className="tc-items-number"
  id="list-items-number"
>
  11/42 items
</div>
`;

exports[`ItemsNumber should render table with total number of items 1`] = `
<div
  className="tc-items-number"
  id="list-items-number"
>
  42 items
</div>
`;
